tests/paczka1/fuzzy1/25137799.err
Error in line 9: 7UqHAeUWOZb S373 34,1
Error in line 18: nu5ATvz2mV A5__ 3_,7
Error in line 19: 7UqHAeUWOZb S451 85,1
Error in line 6: Ki6LXB A599 12,3
Error in line 25: 7UqHAeUWOZb S662 226,57
Error in line 26: 9PWfqaG2B A599 60,0
Error in line 31: 9PWfqaG2B S451 70,0
